Refactor project for clarity

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,14 @@ __pycache__/
 # Virtual environment
 .venv/
 
+# Jupyter artifacts
+.ipynb_checkpoints/
+
 # Data files
 data/
+
+# Model artifacts
+*.h5
 
 # System files
 .DS_Store
